--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "tree.h": "c"
+        "tree.h": "c",
+        "menu_bar.h": "c",
+        "gtk.h": "c",
+        "box.h": "c"
     }
 }
