Módulo para gestionar los tajos de teclado
+ Boceto churrero de detección de Ctrl+Q, no funciona
+ Boceto churrero para obtener opciones del gestor de menu_bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "gtk.h": "c",
         "box.h": "c",
         "window.h": "c",
-        "window_manager.h": "c"
+        "window_manager.h": "c",
+        "atajos_teclado.h": "c"
     }
 }
