Encapsulación de la gestión de atajos de teclado
+ Variables externas para acceder a las opciones de los menús

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "box.h": "c",
         "window.h": "c",
         "window_manager.h": "c",
-        "atajos_teclado.h": "c"
+        "atajos_teclado.h": "c",
+        "menu_bar_manager.h": "c"
     }
 }
