Encapsulación de la inicialización de los atajos de teclado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "window.h": "c",
         "window_manager.h": "c",
         "atajos_teclado.h": "c",
-        "menu_bar_manager.h": "c"
+        "menu_bar_manager.h": "c",
+        "atajos_teclado_manager.h": "c"
     }
 }
