Conectado el botón de "Abrir" a una función que haga algo
+ Más niveles de abstracción por todos los lados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "window_manager.h": "c",
         "atajos_teclado.h": "c",
         "menu_bar_manager.h": "c",
-        "atajos_teclado_manager.h": "c"
+        "atajos_teclado_manager.h": "c",
+        "components_manager.h": "c"
     }
 }
