--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "atajos_teclado.h": "c",
         "menu_bar_manager.h": "c",
         "atajos_teclado_manager.h": "c",
-        "components_manager.h": "c"
+        "components_manager.h": "c",
+        "tree_files.h": "c"
     }
 }
