--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "atajos_teclado_manager.h": "c",
         "components_manager.h": "c",
         "tree_files.h": "c",
-        "tree_string.h": "c"
+        "tree_string.h": "c",
+        "session_manager.h": "c",
+        "stat.h": "c"
     }
 }
