Borrado de nodos con Supr, reestructuración de código y creación del .gitignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "pthread.h": "c",
         "background_shortcuts.h": "c",
         "background_keyboard_imput.h": "c",
-        "sds.h": "c"
+        "sds.h": "c",
+        "tree_manager.h": "c"
     }
 }
