--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
         "background_shortcuts.h": "c",
         "background_keyboard_imput.h": "c",
         "sds.h": "c",
-        "tree_manager.h": "c"
+        "tree_manager.h": "c",
+        "history.h": "c",
+        "atomic": "c"
     }
 }
