Barra de progreso cuando se guarda un árbol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "tree_manager.h": "c",
         "history.h": "c",
         "atomic": "c",
-        "clipboard.h": "c"
+        "clipboard.h": "c",
+        "gtk_menu_bar_wrapper.h": "c"
     }
 }
