--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,11 @@
         "atomic": "c",
         "clipboard.h": "c",
         "gtk_menu_bar_wrapper.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "background_keyboard_imput_wrapper.h": "c",
+        "window_structure.h": "c",
+        "background_keyboard_imput_structure.h": "c",
+        "background_keyboard_imput_manager.h": "c",
+        "bg_key_input.h": "c"
     }
 }
