Limpieza de código

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "window_structure.h": "c",
         "background_keyboard_imput_structure.h": "c",
         "background_keyboard_imput_manager.h": "c",
-        "bg_key_input.h": "c"
+        "bg_key_input.h": "c",
+        "history_dos.h": "c"
     }
 }
