Esqueleto para la ejecución de tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ obj/
 .vscode/
 debug/
 /scryfall_wrapper/files/out
-mtg_console/Cards.cs
 mtg_json_to_cs/files/in/cards.json
+mtg_console/mtg_console/Cards.cs
