--- a/mtg_console/mtg_console/mtg.csproj
+++ b/mtg_console/mtg_console/mtg.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="GtkSharp" Version="3.24.24.117-develop" />
+    <PackageReference Include="xunit" Version="2.9.2" />
   </ItemGroup>
 
 </Project>
