--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ debug/
 mtg_json_to_cs/files/in/cards.json
 mtg_console/mtg_console/Cards.cs
 mtg_console/mtg_console/Sets.cs
+wizard/data/pixel_dungeon.txt
