--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ mtg_json_to_cs/files/in/cards.json
 mtg_console/mtg_console/Cards.cs
 mtg_console/mtg_console/Sets.cs
 /wizard/data
+am/ConversacionesLLMs.txt
